# teamy-rust-cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  check-all.ps1  clippy.toml  init-other-repo.ps1  run-profiler.ps1  run-tracing.ps1
.config/tracey/: config.styx
.github/skills/initialize-from-teamy-rust-cli/: SKILL.md
docs/content/spec-cli/: _index.md
docs/spec/product/: cli.md
docs/spec/repo/: publishing-standards.md
docs/spec/template/: template-rules.md
docs/spec/tools/: tool-standards.md
resources/: app.manifest  app.rc
src/: console_reuse.rs  lib.rs  logging_init.rs  main.rs  tracing.rs  windows_startup.rs
src/cancellation/: cancellation_state.rs  cancellation_token.rs  mod.rs  tests.rs
src/cli/: global_args.rs  json_log_behaviour.rs  mod.rs  output.rs  to_args.rs
src/cli/cache/: cache_cli.rs  mod.rs
src/cli/cache/clean/: cache_clean_cli.rs  mod.rs
src/cli/cache/open/: cache_open_cli.rs
src/cli/cache/path/: cache_path_cli.rs  mod.rs
src/cli/cache/path/show/: cache_path_show_cli.rs  mod.rs
src/cli/cache/show/: cache_show_cli.rs  mod.rs
src/cli/command/: mod.rs
src/cli/command/elevation/: elevation_check_command.rs  elevation_command.rs  elevation_test_command.rs  mod.rs
src/cli/command/hello/: hello_command.rs  hello_greet_command.rs  hello_proof_command.rs  mod.rs
src/cli/docs/: docs_cli.rs  mod.rs
src/cli/docs/show/: docs_show_cli.rs  mod.rs
src/cli/docs/write/: docs_write_cli.rs  mod.rs
src/cli/home/: home_cli.rs  mod.rs
src/cli/home/open/: home_open_cli.rs
src/cli/home/path/: home_path_cli.rs  mod.rs
src/cli/home/path/show/: home_path_show_cli.rs  mod.rs
src/cli/home/show/: home_show_cli.rs  mod.rs
src/cli/init/: init_cli.rs  mod.rs
src/logging/: logging_config.rs  logging_init.rs  mod.rs
src/logging_init/: stop_after_layer.rs
src/paths/: app_home.rs  cache.rs  mod.rs
src/windows/: mod.rs  win_elevation.rs  win_handles.rs  win_strings.rs
tests/: cli_fuzzing.rs  init_command.rs  version_output.rs
