[package]
name = "teamy-rust-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
chrono = "0.4"
clap = { version = "4.5.43", features = ["derive"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
widestring = "1.2.0"
directories-next = "2.0.0"
