[package]
name = "teamy-rust-cli"
version = "0.2.0"
edition = "2024"
authors = ["TeamDman"]
description = "A template Rust CLI application"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/TeamDman/teamy-rust-cli"
keywords = ["cli","template"]
categories = ["command-line-utilities"]
documentation = "https://github.com/TeamDman/teamy-rust-cli" # "https://docs.rs/crate/abc"

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
chrono = "0.4"
clap = { version = "4.5.43", features = ["derive"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
directories-next = "2"
tokio = { version = "1.49.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
teamy-windows = "0.9.0"

[build-dependencies]
embed-resource = "3.0.6"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3


[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
multiple_crate_versions = "allow" # turn this off periodically to see how bad it has gotten :P
# nursery = { level = "warn", priority = -1 }  # optional, might cause more false positives
multiple_unsafe_ops_per_block = "deny"
module_inception = "allow"
